--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
 {
-  "arrowParens": "avoid",
-  "semi": false
+  "tabWidth": 4,
+  "bracketSpacing": true,
+  "insertPragma": false,
+  "jsxBracketSameLine": false,
+  "jsxSingleQuote": true,
+  "printWidth": 120,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "useTabs": false
 }
