--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,23 +1,40 @@
 backend:
-  name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+    name: git-gateway
+    branch: master # Branch to update (optional; defaults to master)
 
 media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
-    create: true
-    slug: 'index'
-    media_folder: ''
-    public_folder: ''
-    path: '{{title}}/index'
-    editor:
-      preview: false
-    fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+    - name: 'blog'
+      label: 'Blog'
+      folder: 'content/blog'
+      create: true
+      slug: 'index'
+      media_folder: static/img
+      public_folder: /img
+      path: '{{title}}/index'
+      editor:
+          preview: true
+      fields:
+          - { label: 'Title', name: 'title', widget: 'string' }
+          - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+          - { label: 'Description', name: 'description', widget: 'string' }
+          - { label: 'Body', name: 'body', widget: 'markdown' }
+    - name: 'settings'
+      label: 'Settings'
+      files:
+          - label: 'Contact Info'
+            name: contact_info
+            file: site/settings/contact_info.json
+            fields:
+                - { label: 'Phone', name: 'phone', widget: 'string' }
+                - { label: 'Email', name: 'email', widget: 'string', required: false }
+                - label: 'Address'
+                  name: 'address'
+                  widget: 'object'
+                  required: false
+                  fields:
+                      - { label: 'Street', name: 'street', widget: 'string', required: false }
+                      - { label: 'Street2', name: 'street2', widget: 'string', required: false }
+                      - { label: 'City', name: 'city', widget: 'string', required: false }
