yml remove useless whitespaces

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,11 +4,12 @@ backend:
 
 media_folder: static/img
 public_folder: /img
-
 collections:
     - name: 'blog'
       label: 'Blog'
       folder: 'content/blog'
+      media_folder: static/img
+      public_folder: /img
       create: true
       slug: 'index'
       path: '{{title}}/index'
