comment media on collections on yml file

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,8 +8,8 @@ collections:
     - name: 'blog'
       label: 'Blog'
       folder: 'content/blog'
-      media_folder: static/img
-      public_folder: /img
+#      media_folder: static/img
+#      public_folder: /img
       create: true
       slug: 'index'
       path: '{{title}}/index'
