--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-remark-copy-linked-files": "^5.23.0",
     "gatsby-remark-images": "^6.23.0",
     "gatsby-remark-prismjs": "^6.23.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-remark-responsive-iframe": "^5.23.0",
     "gatsby-remark-smartypants": "^5.23.0",
     "gatsby-source-filesystem": "^4.23.0",
