--- a/package.json
+++ b/package.json
@@ -8,12 +8,36 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.10.0",
+    "@loadable/component": "^5.15.2",
+    "async": "3.2.4",
+    "axios": "^0.26.1",
+    "browserslist": "^4.20.2",
+    "classnames": "^2.3.1",
+    "follow-redirects": "^1.15.1",
+    "formik": "^2.2.9",
     "gatsby": "^4.23.0",
+    "gatsby-background-image": "^1.6.0",
+    "gatsby-plugin-canonical-urls": "^4.11.0",
+    "gatsby-plugin-emotion": "^7.21.0",
     "gatsby-plugin-feed": "^4.23.0",
+    "gatsby-plugin-gdpr-cookies": "^2.0.8",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-tagmanager": "^4.11.1",
     "gatsby-plugin-image": "^2.23.0",
     "gatsby-plugin-manifest": "^4.23.0",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-netlify-cms": "^6.23.0",
+    "gatsby-plugin-purgecss": "^6.1.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sass": "^5.11.1",
     "gatsby-plugin-sharp": "^4.23.0",
+    "gatsby-plugin-sitemap": "^5.12.1",
+    "gatsby-plugin-webfonts": "^2.2.2",
     "gatsby-remark-copy-linked-files": "^5.23.0",
     "gatsby-remark-images": "^6.23.0",
     "gatsby-remark-prismjs": "^6.23.0",
@@ -26,36 +50,8 @@
     "netlify-cms-app": "^2.15.72",
     "prismjs": "^1.29.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-
-
-    "@emotion/core": "^11.0.0",
-    "@emotion/styled": "^11.10.0",
-    "@loadable/component": "^5.15.2",
-    "async": "3.2.4",
-    "axios": "^0.26.1",
-    "browserslist": "^4.20.2",
-    "classnames": "^2.3.1",
-    "follow-redirects": "^1.15.1",
-    "formik": "^2.2.9",
-    "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-canonical-urls": "^4.11.0",
-    "gatsby-plugin-emotion": "^7.21.0",
-    "gatsby-plugin-gdpr-cookies": "^2.0.8",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-tagmanager": "^4.11.1",
-    "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-purgecss": "^6.1.1",
-    "gatsby-plugin-react-helmet": "^5.11.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sass": "^5.11.1",
-    "gatsby-plugin-sitemap": "^5.12.1",
-    "gatsby-plugin-webfonts": "^2.2.2",
     "react-cookie": "^4.1.1",
+    "react-dom": "^17.0.2",
     "react-focus-lock": "^2.9.1",
     "react-helmet": "^6.0.0",
     "react-hubspot-tracking-code-hook": "^1.2.2",
@@ -71,10 +67,16 @@
     "sass": "1.53.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.8",
-    "twin.macro": "^2.8.2"
+    "twin.macro": "^2.8.2",
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.23.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^2.2.19"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -93,13 +95,6 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "devDependencies": {
-    "autoprefixer": "10.4.7",
-    "gatsby-plugin-postcss": "^5.11.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^2.2.19"
   },
   "resolutions": {
     "lodash": "4.17.21",
