--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-transformer-remark": "^5.23.0",
     "gatsby-transformer-sharp": "^4.23.0",
+    "lodash": "^4.17.21",
     "netlify-cms-app": "^2.15.72",
     "prismjs": "^1.29.0",
     "react": "^17.0.2",
