--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/styled": "^11.10.0",
+    "@growthbook/growthbook-react": "^0.9.1",
     "@loadable/component": "^5.15.2",
     "async": "3.2.4",
     "axios": "^0.26.1",
@@ -48,6 +49,7 @@
     "gatsby-transformer-remark": "^5.23.0",
     "gatsby-transformer-sharp": "^4.23.0",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "netlify-cms-app": "^2.15.72",
     "prismjs": "^1.29.0",
     "react": "^17.0.2",
