--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,14 @@ name: Gatsby Publish
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Gatsby Publish
-      - uses: enriikke/gatsby-gh-pages-action@v2.2.0
+      - uses: actions/checkout@v1
+      - uses: gatsby-gh-pages-action@v2.2.0
         with:
-          deploy-branch: gh-pages
+          access-token: ${{ secrets.CUCU_AND_CO }}
+          deplay-branch: gh-pages
