--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
       - run: npm install
       
       - run: npm run build --if-present
+        env:
+          ALGOLIA_API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
       
       - name: Deploy to GitHub Pages
         # You may pin to the exact commit or the version.
